update: package.json

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "gemini-ai",
   "version": "1.0.0",
-  "description": "A Node.js library for interacting with Google Bard, an experimental conversational AI chat service powered by Google's Language Model for Dialogue Applications (LaMDA). Use this library to leverage the capabilities of Bard, including coding, math problem solving, and writing assistance.",
+  "description": "A Node.js library for interacting with Google Gemini, an experimental conversational AI chat service powered by Google's Language Model for Dialogue Applications (LaMDA). Use this library to leverage the capabilities of Gemini, including coding, math problem solving, and writing assistance.",
   "main": "index.js",
   "keywords": [
     "node",
